--- a/EnergyStation/app/src/main/res/layout/activity_main.xml
+++ b/EnergyStation/app/src/main/res/layout/activity_main.xml
@@ -16,11 +16,11 @@
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="casual"
             android:text="@string/app_name"
             android:textColor="@android:color/white"
             android:textSize="30sp"
             android:textStyle="bold"
+            app:fontFamily="casual"
             app:layout_constraintBottom_toTopOf="@+id/textView2"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -70,6 +70,8 @@
             android:layout_height="wrap_content"
             android:text="@string/developers"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/button"
+            app:layout_constraintVertical_bias="1.0" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
