--- a/app/src/main/res/drawable/background_button_pressed.xml
+++ b/app/src/main/res/drawable/background_button_pressed.xml
@@ -2,8 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
 
-    <solid android:color="#00BCD4"/>
-
-    <corners android:radius="10dp"/>
-
+    <solid android:color="@color/colorAccent" />
+    <corners android:radius="10dp" />
 </shape>
