--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#03A9F4</color>
     <color name="colorPrimaryDark">#2196F3</color>
-    <color name="colorAccent">#3F51B5</color>
+    <color name="colorAccent">#00BCD4</color>
 </resources>
